# dcd_mapping

./: .gitignore  .pre-commit-config  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  TODO.md  blat_out.psl  blat_output_test.txt  blat_query.fa  pyproject.toml  requirements.txt  schema.json  temp_example.json
.github/workflows/: checks.yaml  python-package.yml  release.yaml
dcd_mapping/: __init__.py  standardize.py
docker-compose/: docker-compose.yml
docker-compose/load_gene_normalizer/: Dockerfile  load_gene_normalizer.sh
docker-compose/load_seqrepo/: Dockerfile  load_seqrepo.sh
docker-compose/load_uta/: Dockerfile  load_uta.sh
mavedb_mapping/: __init__.py  align.py  blat_alignment.py  cache.py  class_for_qh.py  fetch.py  find_start_pos.py  get_allele.py  main.py  metadata_process.py  output.py  reference_select.py  resources.py  sample.json  schemas.py  test_for_blat.py  test_for_invalid_inputs.py  test_for_transcript_selection.py  transcript_selection.py  transcript_selection_helper.py  urn:mavedb:00000041-b-1  urn:mavedb:00000060-a-1  vrs_helpers.py  vrs_mapping.py  vrs_mapping_for_coding.py
mavedb_mapping/tests/: conftest.py  test_for_blat.py  test_for_invalid_inputs.py  test_for_mapped_variants.py  test_for_transcript_selection.py
mavedb_mapping/tests/data/: urn:mavedb:00000001-a-4  urn:mavedb:00000010-a-1
misc/bug_hunting/: check_align.py  check_transcript.py  human_urns.txt
notebooks/analysis/: Pipfile  README.md  experiment_scoresets.txt  generate_example_mappings.ipynb  mapping_analysis.ipynb  mave_mapping_fig_2b.R  mave_mapping_fig_3b.R  mave_target_reference_analysis.ipynb  mavedb_mapping.ipynb  mavedb_mapping_analysis_refactor.ipynb  mavedb_scoreset_breakdown.ipynb  normalization_analysis.ipynb  requirements.txt
notebooks/analysis/.ipynb_checkpoints/: mave_target_reference_analysis-checkpoint.ipynb
notebooks/analysis/analysis_files/: mave_dat.csv  mave_metadata_20241114.csv  score_sets_strands.pkl
notebooks/analysis/results/: mappings.pickle  mave_blat.pickle  mave_dat.csv  vrs_mappings_coding.pickle.REMOVED.git-id
sample_mappings/: 00000001-c-1.json  00000001-c-2.json  00000005-a-6_090722.json  00000043-a-1.json  00000043-a-2_090722.json  00000045-c-1.json  00000045-k-1_090222.json  00000048-a-1.json  00000049-a-3.json  00000049-a-7.json  00000050-a-1.json  00000055-0-1.json  00000060-a-2_090222.json  00000061-d-1.json  00000061-i-1_090722.json  00000067-a-1_090222.json  00000068-b-1.json  00000069-a-2.json  00000078-a-1.json  00000081-a-1_090222.json  00000094-a-14_090222.json  00000094-a-5_090722.json  00000094-a-6.json  00000098-a-1.json  00000099-a-1.json  00000103-c-1.json
scripts/: update_jsonschema.py
src/dcd_mapping/: __init__.py  align.py  annotate.py  cli.py  lookup.py  main.py  mavedb_data.py  new_vrs_map.py  resource_utils.py  resources.py  schemas.py  transcripts.py  utils.py  vrs_map.py  vrs_v1_schemas.py
src/mavedb_mapping/: __init__.py  blat_alignment.py  main.py  metadata_process.py
src/mavemap/: __init__.py  align.py  cache.py  cli.py  lookup.py  main.py  resources.py  schemas.py  select.py
tests/: conftest.py  test_align.py  test_annotate.py  test_for_blat.py  test_for_invalid_inputs.py  test_for_mapped_variants.py  test_for_transcript_selection.py  test_mavedb_data.py  test_resources.py  test_transcript.py  test_vrs_map.py
tests/data/: 00000001-a-4.json  00000041-a-1.json  LRG_RefSeqGene_20230802  scores-00000001-a-4  scores-00000010-a-1  scores-00000041-a-1  scores-00000041-b-1  scores-00000047-c-1  scores-00000083-e-1  scores-00000091-a-1  scores-00000097-c-1  urn:mavedb:00000004-a-1  urn:mavedb:00000018-a-1  urn:mavedb:00000041-a-1  urn:mavedb:00000047-c-1  urn:mavedb:00000083-e-1  urn:mavedb:00000083-e-1.1  urn:mavedb:00000091-a-1  urn:mavedb:00000097-c-1
tests/fixtures/: align_result.json  mapped_scores.json  scoreset_metadata.json  scoreset_metadata_response.json  transcript_result.json  urn:mavedb:00000001-b-2_scores.csv  urn:mavedb:00000002-a-2_scores.csv  urn:mavedb:00000018-a-1_scores.csv  urn:mavedb:00000024-a-1_scores.csv  urn:mavedb:00000041-a-1_scores.csv  urn:mavedb:00000068-a-1_scores.csv  urn:mavedb:00000093-a-1_scores.csv  urn:mavedb:00000099-a-1_scores.csv  urn:mavedb:00000103-c-1_scores.csv
tests/unit/: test_align.py  test_resources.py  test_transcript.py  test_vrs_map.py
